# flashalpha-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  article-flashalpha-python-sdk.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md
examples/: quickstart.py  strategies_earnings_structures.py
src/flashalpha/: __init__.py  client.py  exceptions.py  types.py
tests/: test_client.py  test_integration.py
