[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flashalpha"
version = "0.4.0rc1"
description = "Python SDK for the FlashAlpha options analytics API — live options screener, gamma exposure (GEX), VRP, delta, vanna, charm, greeks, 0DTE analytics, volatility surfaces, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FlashAlpha", email = "tom@flashalpha.com" }]
keywords = [
    "options",
    "options screener",
    "live options screener",
    "gamma exposure",
    "gex",
    "greeks",
    "options analytics",
    "options API",
    "delta exposure",
    "vanna",
    "charm",
    "implied volatility",
    "black-scholes",
    "trading",
    "finance",
    "quantitative finance",
    "0dte",
    "zero dte",
    "volatility surface",
    "options data",
    "dealer positioning",
    "kelly criterion",
    "vol surface",
    "SVI",
    "variance swap",
    "variance risk premium",
    "VRP",
    "harvest score",
    "short vol",
    "vol selling",
    "dealer flow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.33.0"]

[project.urls]
Homepage = "https://flashalpha.com"
Documentation = "https://flashalpha.com/docs"
Repository = "https://github.com/FlashAlpha-lab/flashalpha-python"
Issues = "https://github.com/FlashAlpha-lab/flashalpha-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "responses>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/flashalpha"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist — only ship source, README, LICENSE, pyproject. Anything
# else in the working dir (e.g. .claude/, CLAUDE.md, .env*, dist/, tests/)
# is excluded so the sdist stays minimal.
support-legacy = false
include = [
  "/src/flashalpha",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  ".claude",
  "CLAUDE.md",
  ".env",
  ".env.*",
  ".gitignore",
  "**/.gitignore",
  ".vscode",
  ".idea",
  "*.local",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: hits the live FlashAlpha API (deselect with -m 'not integration')"]
